# robotics

./: CMakeLists.txt  README.md  camMain.cpp  cox.py  h_chooser.py  hsv_threshold_picker.py  main.cpp  rav_color_detection.cpp  rav_color_detection.h  rav_math.h  test.cpp  test.py  testa_spi.c
SpeedProfile/: CMakeLists.txt  main.cpp
SpeedProfile/lib/: speedProfile.cpp  speedProfile.hpp
lib/: cox.cpp  cox.hpp  kalman.cpp  kalman.hpp  motors.c  motors.cpp  motors.h  motors.hpp  odometry.cpp  odometry.hpp  pid.cpp  pid.hpp  plotter.py  positionUpdate.cpp  positionUpdate.hpp  ravCam.cpp  ravCam.hpp  ravLidar.cpp  ravLidar.hpp  speedProfile.cpp  speedProfile.hpp  units.hpp  vision.cpp  vision.hpp  writeToFile.cpp  writeToFile.hpp
tommys/: receiving.py
